Make netbsd32_from_{ifreq,oifreq}() copy the whole structure, not only the interface name. Finally fix my own PR/39424.

ok by christos.